# CockatriceTournamentBot

./: .gitattributes  .gitignore  CMakeLists.txt  CockatriceBot.kdev4  CockatriceTournamentBot.kdev4  LICENCE  Match 4-84.cor  README.md  SECURITY.md  clean_file.py  clean_source.sh  compile.sh  format.sh  helpToSrc.py  index.md  jankylogtool.java  makefile  sonar-project.properties  tricebot.py  update_mongoose.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  sys-tests.yml
.kdev4/: CockatriceBot.kdev4
pb/: CMakeLists.txt
src/: .botconf.c.kate-swp  ansi_colour.h  api_server.c  api_server.h  apifaq.html  apihelp.html  apiserver.c  apiserver.cpp  apiserver.h  apistyle.css  bot.c  bot.cpp  bot.h  bot_c_flags.h  bot_conf.c  bot_conf.h  botcflags.h  botconf.c  botconf.h  cmd_queue.c  cmd_queue.h  commands.c  commands.h  game_struct.c  game_struct.h  gamestruct.c  gamestruct.h  get_pb_extension.h  helpToSrc.py  helppage.gen.html  helppage.h  helppage.html  index.html  logger.h  main.c  mongoose.c  mongoose.h  ncursesinterface.h  player_deck_info.c  player_deck_info.h  (+5 more)
src/www/: api_faq.html  api_help.html  api_style.css  index.html
tests/: formatcode.sh  runner.cpp  sys_tests.cpp  testApiServer.cpp  testApiServer.h  testBot.cpp  testBot.h  testBotConfig.cpp  testBotConfig.h  testCmdQueue.cpp  testCmdQueue.h  testCommands.cpp  testCommands.h  testGameStruct.cpp  testGameStruct.h  testPlayerDeckInfo.cpp  testPlayerDeckInfo.h  testTriceStructs.cpp  testTriceStructs.h
